@@ -102,7 +102,8 @@ static char **mirrors_in(char *country) {
 /* returns true if there is a mirror in the specified country */
 static inline int has_mirror(char *country) {
 	char **mirrors;
-	if (strcmp(country, MANUAL_ENTRY) == 0)
+	if (strcmp(country, MANUAL_ENTRY) == 0 ||
+	    strcmp(country, MANUAL_ENTRY_OLD))
 		return 1;
 	mirrors = mirrors_in(country);
 	return (mirrors[0] == NULL) ? 0 : 1;
@@ -334,10 +335,12 @@ static int choose_mirror(void) {
 
 	debconf_get(debconf, DEBCONF_BASE "country");
 #ifndef WITH_FTP_MANUAL
-	manual_entry = ! strcmp(debconf->value, MANUAL_ENTRY);
+	manual_entry = ! strcmp(debconf->value, MANUAL_ENTRY) ||
+		       ! strcmp(debconf->value, MANUAL_ENTRY_OLD);
 #else
 	if (! strcasecmp(protocol,"ftp") == 0)
-		manual_entry = ! strcmp(debconf->value, MANUAL_ENTRY);
+		manual_entry = ! strcmp(debconf->value, MANUAL_ENTRY) ||
+			       ! strcmp(debconf->value, MANUAL_ENTRY_OLD);
 	else
 		manual_entry = 1;
 #endif
