@@ -6,7 +6,7 @@
 
 Template: mirror/country
 Type: string
-Description: country code or "enter information manually" (internal use)
+Description: country code or "manual" (internal use)
 
 Template: mirror/suite
 Type: select
