@@ -16,7 +16,10 @@ struct mirror_t {
 
 /* The string defined below must match the string used in the templates
  * (http and ftp) for this option. */
-#define MANUAL_ENTRY "enter information manually"
+#define MANUAL_ENTRY "manual"
+
+/* backward compatibility with old preseed files */
+#define MANUAL_ENTRY_OLD "enter information manually"
 
 #define SUITE_LENGTH 32
 
